# esp32_nim_net_example

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/erl_interface/: CMakeLists.txt
components/erl_interface/src/connect/: ei_connect.c  ei_connect_int.h  ei_custom.c
components/erl_interface/src/epmd/: epmd_publish.c
components/erl_interface/src/misc/: ei_portio.c  ei_portio.h  show_msg.c
components/erl_interface/src/prog/: erl_call.c  erl_start.c
nim/: .gitignore  0001-pathching.patch  0001-sockets.patch  CMakeLists.txt  Makefile  example_server.nim  extras.h  nim.cfg
nim/_nimcache/: @meinode@ssrc@seinode.nim.c  @meinode@ssrc@seinode@scodec.nim.c  @meinode@ssrc@seinode@sei.nim.c  @meinode@ssrc@spublish.nim.c  @mexample_server.nim.c  assertions.ndi  asyncdispatch.ndi  asyncfutures.ndi  asynchttpserver.ndi  asyncnet.ndi  codec.ndi  compile_example_server.sh  cstrutils.ndi  deques.ndi  dollars.ndi  dynlib.ndi  ei.ndi  einode.ndi  example_server.deps  example_server.json  example_server.ndi  freertos.ndi  hashes.ndi  heapqueue.ndi  httpcore.ndi  io.ndi  locks.ndi  math.ndi  monotimes.ndi  nativesockets.ndi  net.ndi  options.ndi  os.ndi  parseutils.ndi  posix.ndi  publish.ndi  repr_v2.ndi  selectors.ndi  sharedlist.ndi  stdlib_assertions.nim.c  (+38 more)
nim/einode/: .gitignore  Makefile  README.md  einode.nimble
nim/einode/c_src/erts_include/: ei.h
nim/einode/src/: einode.nim  publish.nim
nim/einode/src/einode/: codec.nim  ei.nim
nim/einode/tests/: erl_base.exs  test1.nim
nim/einode/tests/c-nodes-example/: .gitignore  Makefile  README.md  cnode_c.c  (+4 more)
(+44 files in other folders)
